AS/tp2-bison/build/parser.output
Grammar

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: '\n'
    4     | expr '\n'

    5 expr: "value"
    6     | "name"
    7     | expr '+' expr
    8     | '-' expr
    9     | expr '-' expr
   10     | expr '*' expr
   11     | expr '/' expr
   12     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4
    '(' (40) 12
    ')' (41) 12
    '*' (42) 10
    '+' (43) 7
    '-' (45) 8 9
    '/' (47) 11
    error (256)
    "value" <value> (258) 5
    "name" <name> (259) 6


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    input (13)
        on left: 1 2
        on right: 0 2
    line (14)
        on left: 3 4
        on right: 2
    expr <value> (15)
        on left: 5 6 7 8 9 10 11 12
        on right: 4 7 8 9 10 11 12


State 0

    0 $accept: • input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input • $end
    2 input: input • line

    $end     shift, and go to state 2
    "value"  shift, and go to state 3
    "name"   shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6
    '\n'     shift, and go to state 7

    line  go to state 8
    expr  go to state 9


State 2

    0 $accept: input $end •

    $default  accept


State 3

    5 expr: "value" •

    $default  reduce using rule 5 (expr)


State 4

    6 expr: "name" •

    $default  reduce using rule 6 (expr)


State 5

    8 expr: '-' • expr

    "value"  shift, and go to state 3
    "name"   shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 10


State 6

   12 expr: '(' • expr ')'

    "value"  shift, and go to state 3
    "name"   shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 11


State 7

    3 line: '\n' •

    $default  reduce using rule 3 (line)


State 8

    2 input: input line •

    $default  reduce using rule 2 (input)


State 9

    4 line: expr • '\n'
    7 expr: expr • '+' expr
    9     | expr • '-' expr
   10     | expr • '*' expr
   11     | expr • '/' expr

    '+'   shift, and go to state 12
    '-'   shift, and go to state 13
    '*'   shift, and go to state 14
    '/'   shift, and go to state 15
    '\n'  shift, and go to state 16


State 10

    7 expr: expr • '+' expr
    8     | '-' expr •
    9     | expr • '-' expr
   10     | expr • '*' expr
   11     | expr • '/' expr

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 8 (expr)


State 11

    7 expr: expr • '+' expr
    9     | expr • '-' expr
   10     | expr • '*' expr
   11     | expr • '/' expr
   12     | '(' expr • ')'

    '+'  shift, and go to state 12
    '-'  shift, and go to state 13
    '*'  shift, and go to state 14
    '/'  shift, and go to state 15
    ')'  shift, and go to state 17


State 12

    7 expr: expr '+' • expr

    "value"  shift, and go to state 3
    "name"   shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 18


State 13

    9 expr: expr '-' • expr

    "value"  shift, and go to state 3
    "name"   shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 19


State 14

   10 expr: expr '*' • expr

    "value"  shift, and go to state 3
    "name"   shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 20


State 15

   11 expr: expr '/' • expr

    "value"  shift, and go to state 3
    "name"   shift, and go to state 4
    '-'      shift, and go to state 5
    '('      shift, and go to state 6

    expr  go to state 21


State 16

    4 line: expr '\n' •

    $default  reduce using rule 4 (line)


State 17

   12 expr: '(' expr ')' •

    $default  reduce using rule 12 (expr)


State 18

    7 expr: expr • '+' expr
    7     | expr '+' expr •
    9     | expr • '-' expr
   10     | expr • '*' expr
   11     | expr • '/' expr

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 7 (expr)


State 19

    7 expr: expr • '+' expr
    9     | expr • '-' expr
    9     | expr '-' expr •
   10     | expr • '*' expr
   11     | expr • '/' expr

    '*'  shift, and go to state 14
    '/'  shift, and go to state 15

    $default  reduce using rule 9 (expr)


State 20

    7 expr: expr • '+' expr
    9     | expr • '-' expr
   10     | expr • '*' expr
   10     | expr '*' expr •
   11     | expr • '/' expr

    $default  reduce using rule 10 (expr)


State 21

    7 expr: expr • '+' expr
    9     | expr • '-' expr
   10     | expr • '*' expr
   11     | expr • '/' expr
   11     | expr '/' expr •

    $default  reduce using rule 11 (expr)
